--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20brownies%cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20brownies%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
                 </div>
             </div>
           </div>
@@ -88,7 +88,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Victoria%cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Victoria%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
                 </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Pandanus%cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Pandanus%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
                 </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Eclairs%cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Eclairs%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
                 </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Creampuff%cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Creampuff%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
                 </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Batik%cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Batik%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
                 </div>
             </div>
           </div>
