--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="row justify-content-center">
         <h2 class="new">New Launching</h2>
 
-          <div class="col-8">
+          <div class="col-md">
             <div class="card">
               <img src="img/batik.jpg" class="card-img-top">
                 <div class="card-body">
