--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="#home">Home</a>
             <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#testi">Testimoni</a>
+            <a class="nav-link" href="#testi">Catalog</a>
             <a class="nav-link" href="#contact">Contact</a>
           </div>
         </div>
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row text-center mb-2">
           <div class="col">
-            <h2>Our Cake</h2>
+            <h2>Cake Catalog</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -75,9 +75,10 @@
             <div class="card">
               <img src="img/brownies.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Brownies Cake</h5>
-                  <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20brownies%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <h5 class="card-title"> Brownies Cake </h5>
+                  <p class="card-text"> Cake Coklat panggang / kukus dengan lelehan coklat & Choco Cips diatas nya. </p><br>
+                  <p><a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20brownies%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p class="sold" align="right">&nbsp;&nbsp;sold : 0 </p></p>
                 </div>
             </div>
           </div>
@@ -86,9 +87,10 @@
             <div class="card">
               <img src="img/victoria.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Brownies Cake</h5>
-                  <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Victoria%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <h5 class="card-title"> Victoria Cake </h5>
+                  <p class="card-text"> Cake full cream dengan topping strawberry. </p><br><br>
+                  <p><a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Victoria%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p class="sold" align="right">&nbsp;&nbsp;sold : 2 </p></p>
                 </div>
             </div>
           </div>
@@ -97,9 +99,10 @@
             <div class="card">
               <img src="img/pandanus.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Brownies Cake</h5>
-                  <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Pandanus%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <h5 class="card-title"> Pandanus Brown Cake</h5>
+                  <p class="card-text"> Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya </p>
+                  <p><a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Pandanus%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p class="sold" align="right">&nbsp;&nbsp;sold : 0 </p></p>
                 </div>
             </div>
           </div>
@@ -108,9 +111,10 @@
             <div class="card">
               <img src="img/eclairs.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Brownies Cake</h5>
-                  <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Eclairs%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <h5 class="card-title"> Eclairs Cake </h5>
+                  <p class="card-text"> Cake full cream denghan lapisan coklat </p>
+                  <p><a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Eclairs%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p class="sold" align="right">&nbsp;&nbsp;sold : 2 </p></p>
                 </div>
             </div>
           </div>
@@ -119,9 +123,10 @@
             <div class="card">
               <img src="img/creampuff.jpg" class="card-img-top">
                 <div class="card-body">
-                  <h5 class="card-title">Brownies Cake</h5>
-                  <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Creampuff%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <h5 class="card-title"> Creampuff Cake </h5>
+                  <p class="card-text"> Cake dengan isian Full Cream yang lumer </p><br>
+                  <p><a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Creampuff%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p class="sold" align="right">&nbsp;&nbsp;sold : 0 </p></p>
                 </div>
             </div>
           </div>
@@ -137,7 +142,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Brownies Cake</h5>
                   <p class="card-text">Bolu Coklat kukus dengan lelehan coklat & Choco Cips diatas nya</p>
-                  <a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Batik%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p><a href="https://wa.me/+6283865734015?text=Kak%20aku%20mau%20pesan%20Batik%20cake%20nya%20dong%20kak%20" class="btn" style="background-color: #e1b391; color: white;"><b>Book Now</b></a>
+                  <p class="sold" align="right">&nbsp;&nbsp;sold : 0 </p></p>
                 </div>
             </div>
           </div>
